Update and rename readme.txt to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Dependencies
+# Requirements
 dht22 sensor, raspberry pi, distribution derived from Debian (raspbian), $gnuplot and $python3
 
 # Tasks to be run by cron
