--- a/plot.conf
+++ b/plot.conf
@@ -9,6 +9,7 @@ set xlabel "Date/Time"
 
 # Title for Y-axis
 set ylabel "Temperature (C)"
+set yrange [-15:50]
 
 # Title for Y2-axis
 set y2label "R. Humidity (%)"
@@ -25,8 +26,11 @@ set xdata time
 # Time in log-file is given in format YYYY-MM-DD HH:MM:SS
 set timefmt '%m/%d/%y,%H:%M'
 
+# Display the last 7 day
+set xrange [time(0) - 7*24*60*60:]
+
 # Display notation for time
-set format x "%d %b\n%Y"
+set format x "%d-%m\n%Y"
 
 # output into png file
 set terminal png size 800,500
@@ -35,4 +39,4 @@ set output "plot.png"
 # Below, "using 1:2" means use column 1 of the data for X, and column 2 of the data for Y
 
 # read data from file and generate plot
-plot "plot.txt" using 1:3 title "Temperature (C)" with lines lw 2 , "plot.txt" using 1:4 title "R. Humidity (%)" with lines lw 2 
+plot "plot.txt" using 1:3 title "Temperature (C)" with lines lw 2 lc rgb "red", "plot.txt" using 1:4 title "R. Humidity (%)" with lines lw 2 lc rgb "dark-green", "plot.txt" using 1:5 title "Dew point" with lines lw 2 lc rgb "blue"
