--- a/plot.conf
+++ b/plot.conf
@@ -5,14 +5,14 @@ set datafile separator ","
 set title "DHT22 Inside the observatory"
 
 # X-axis label
-set xlabel "Date/Time"
+set xlabel "Date/Time\n"
 
 # Title for Y-axis
-set ylabel "Temperature (C)"
+#set ylabel "(*C)"
 set yrange [-15:50]
 
 # Title for Y2-axis
-set y2label "R. Humidity (%)"
+#set y2label "(%)"
 
 # Place ticks on second Y2-axis
 set y2tics border
@@ -20,17 +20,21 @@ set y2tics border
 # Automatic scaling
 set autoscale
 
+set grid
+
 # Define that data on X-axis should be interpreted as time
 set xdata time
 
 # Time in log-file is given in format YYYY-MM-DD HH:MM:SS
 set timefmt '%m/%d/%y,%H:%M'
 
-# Display the last 7 day
+# Display the last 7 days
 set xrange [time(0) - 7*24*60*60:]
 
 # Display notation for time
 set format x "%d-%m\n%Y"
+
+set key outside bottom center
 
 # output into png file
 set terminal png size 800,500
@@ -39,4 +43,4 @@ set output "plot.png"
 # Below, "using 1:2" means use column 1 of the data for X, and column 2 of the data for Y
 
 # read data from file and generate plot
-plot "plot.txt" using 1:3 title "Temperature (C)" with lines lw 2 lc rgb "red", "plot.txt" using 1:4 title "R. Humidity (%)" with lines lw 2 lc rgb "dark-green", "plot.txt" using 1:5 title "Dew point" with lines lw 2 lc rgb "blue"
+plot "plot.txt" using 1:3 title "Temperature (*C)" with lines lw 2 lc rgb "red", "plot.txt" using 1:4 title "R. Humidity (%)" with lines lw 2 lc rgb "dark-green", "plot.txt" using 1:5 title "Dew point (*C)" with lines lw 2 lc rgb "blue",  "plot.txt" using 1:6 title "Heat index (*C)" with lines lw 2 lc rgb "brown"
